logs/dag_id=dag1/run_id=manual__2023-04-26T09:31:51.806550+00:00/task_id=insert_values/attempt=1.log
[2023-04-26T09:31:53.162+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: dag1.insert_values manual__2023-04-26T09:31:51.806550+00:00 [queued]>
[2023-04-26T09:31:53.169+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: dag1.insert_values manual__2023-04-26T09:31:51.806550+00:00 [queued]>
[2023-04-26T09:31:53.170+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-04-26T09:31:53.170+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2023-04-26T09:31:53.171+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-04-26T09:31:53.179+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): insert_values> on 2023-04-26 09:31:51.806550+00:00
[2023-04-26T09:31:53.184+0000] {standard_task_runner.py:55} INFO - Started process 3226 to run task
[2023-04-26T09:31:53.189+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'dag1', 'insert_values', 'manual__2023-04-26T09:31:51.806550+00:00', '--job-id', '242', '--raw', '--subdir', 'DAGS_FOLDER/dag1.py', '--cfg-path', '/tmp/tmp3hktm_c5']
[2023-04-26T09:31:53.190+0000] {standard_task_runner.py:83} INFO - Job 242: Subtask insert_values
[2023-04-26T09:31:53.248+0000] {task_command.py:376} INFO - Running <TaskInstance: dag1.insert_values manual__2023-04-26T09:31:51.806550+00:00 [running]> on host c452347a64f2
[2023-04-26T09:31:53.309+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=dag1
AIRFLOW_CTX_TASK_ID=insert_values
AIRFLOW_CTX_EXECUTION_DATE=2023-04-26T09:31:51.806550+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-04-26T09:31:51.806550+00:00
[2023-04-26T09:31:53.317+0000] {base.py:71} INFO - Using connection ID 'postgres' for task execution.
[2023-04-26T09:31:53.322+0000] {sql.py:315} INFO - Running statement: 
            INSERT INTO users (first_name, last_name, email)
            VALUES ('John', 'Doe', 'UK', 'johndoe10', 'pass1','johndoe@example.com'),
            ('Jane', 'Smith', 'USA','johnsmith14', 'pass2', 'janesmith@example.com'),
            ('James', 'Brown', 'USA','jamesbrown12', 'pass3','jamesbrown@example.com');
        , parameters: None
[2023-04-26T09:31:53.324+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 3:             VALUES ('John', 'Doe', 'UK', 'johndoe10', 'pass1...
                                                 ^

[2023-04-26T09:31:53.332+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=dag1, task_id=insert_values, execution_date=20230426T093151, start_date=20230426T093153, end_date=20230426T093153
[2023-04-26T09:31:53.341+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 242 for task insert_values (INSERT has more expressions than target columns
LINE 3:             VALUES ('John', 'Doe', 'UK', 'johndoe10', 'pass1...
                                                 ^
; 3226)
[2023-04-26T09:31:53.360+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-04-26T09:31:53.374+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
